--- a/ss8/ss8/bt1.html
+++ b/ss8/ss8/bt1.html
@@ -1,10 +1,75 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<style>
+  .gallery {
+    padding:0px;
+    margin: 0px;
+  }
+</style>
 </head>
-<body>
-$END$
+<body class="container">
+<!-- Gallery -->
+<div class="row">
+  <h2>Responsive Image Gallery</h2>
+  <h5>Resize the browser window to see the effect.</h5>
+  <div class="col-xs-6 col-sm-3 mb-2 border gallery">
+    <a href="img_fjords.jpg" target="_blank">
+      <img
+        src="img_fjords.jpg"
+        class="w-100 shadow-1-strong mb-2"
+        alt="Boat on Calm Water"
+      />
+    </a>
+    <div>
+      Add a description of the image here
+    </div>
+  </div>
+
+  <div class="col-xs-6 col-sm-3 mb-2 border gallery">
+    <a href="img_forest.jpg" target="_blank"><img
+      src="img_mountains.jpg"
+      class="w-100 shadow-1-strong mb-2"
+      alt="Boat on Calm Water"
+    />
+    </a>
+    <div>
+      Add a description of the image here
+    </div>
+  </div>
+
+  <div class="col-xs-6 col-sm-3 mb-2 border gallery">
+    <a href="img_lights.jpg" target="_blank"><img
+      src="img_lights.jpg"
+      class="w-100 shadow-1-strong  mb-2"
+      alt="Waves at Sea"
+    />
+    </a>
+    <div>
+      Add a description of the image here
+    </div>
+  </div>
+  <div class="col-xs-6 col-sm-3 mb-2 border gallery">
+    <a href="img_mountains.jpg" target="_blank"><img
+      src="img_mountains.jpg"
+      class="w-100 shadow-1-strong mb-2"
+      alt="Waves at Sea"
+    />
+    </a>
+    <div>
+      Add a description of the image here
+    </div>
+  </div>
+  <div>
+    <p>This example use media queries to re-arrange the images on different screen sizes: for screens larger than 700px wide, it will show four images side by side, for screens smaller than 700px, it will show two images side by side. For screens smaller than 500px, the images will stack vertically (100%).</p>
+  </div>
+</div>
+<!-- Gallery -->
 </body>
 </html>
